--- a/SoundMatch/android/app/build.gradle
+++ b/SoundMatch/android/app/build.gradle
@@ -108,6 +108,8 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
+    implementation('com.facebook.fresco:fresco:2.0.0')
+    implementation('com.facebook.fresco:animated-gif:2.0.0')
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
@@ -115,5 +117,5 @@ dependencies {
         implementation jscFlavor
     }
 }
-
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
