--- a/SoundMatch/package.json
+++ b/SoundMatch/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
+    "expo-av": "^13.6.0",
     "expo-linear-gradient": "^12.5.0",
     "lottie-react-native": "^6.5.0",
     "react": "18.2.0",
