--- a/SoundMatch/package.json
+++ b/SoundMatch/package.json
@@ -26,6 +26,7 @@
     "react-native-nfc-manager": "^3.14.12",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-sound": "^0.11.2",
     "react-native-swipe-image": "^1.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "^13.6.4"
